[package]
name = "scanny"
version = "0.1.0"
authors = ["Shreyas Karnik <karnik.shreyas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rayon = "1.6.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
